[package]
name = "ch"
version = "0.1.0"
authors = ["Jihyun Yu <j.yu@naverlabs.com>"]

[dependencies]
csv = "*"
serde = "*"
serde_derive = "*"
error-chain = "*"
ordslice = "*"
stopwatch = "*"
rayon = "*"
take_mut = "*"
fnv = "*"
clap = "*"
osmpbf = "*"
memmap = "*"
failure = "*"

[profile.test]
debug = true

[profile.release]
debug = true
lto = true
