[package]
name = "ch"
version = "0.1.0"
authors = ["Jihyun Yu <j.yu@naverlabs.com>"]
edition = "2018"

[dependencies]
clap = "*"
csv = "*"
error-chain = "*"
failure = "*"
fnv = "*"
memmap = "*"
ordslice = "*"
osmpbf = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
take_mut = "*"
took = "*"

[profile.test]
debug = true

[profile.release]
debug = true
lto = true
