[package]
name = "ch"
version = "0.1.0"
authors = ["Jihyun Yu <j.yu@naverlabs.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
clap = "*"
csv = "*"
dbase = "*"
fnv = "*"
geojson = "*"
memmap = "*"
ordslice = "*"
osmpbf = "*"
rayon = "*"
s2 = "*"
serde = "*"
serde_derive = "*"
shapefile = "*"
take_mut = "*"
took = "*"

[profile.test]
debug = true

[profile.release]
debug = true
lto = true
